--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,10 +8,11 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/weathericon"
         android:supportsRtl="true"
-        android:theme="@style/CustomTheme"
+        android:theme="@style/AppTheme"
        >
         <activity
-            android:name=".MainActivity">
+            android:name=".MainActivity"
+			android:theme="@style/CustomTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
